Bug 348784: Bookmark and History sidebar titles have too much padding and are not aligned with 'Search:' below each, patch by Kai Liu <kliu.bugzilla.3c9fmail.kailiu.com>, r=me, ui-r=beltzner, a=beltzner
UltraBlame original commit: d768c3ea7aeff9ba8b3f5dea7fa80052982088a8

--- a/browser/themes/winstripe/browser/browser.css
+++ b/browser/themes/winstripe/browser/browser.css
@@ -10786,6 +10786,21 @@ Window
 ;
 }
 #
+sidebar
+-
+title
+{
+-
+moz
+-
+padding
+-
+start
+:
+0px
+;
+}
+#
 status
 -
 bar
